--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.12.3",
+    "forever": "^0.14.1",
     "underscore": "^1.8.2"
   }
 }
